[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resource/Graphic/Card/human.png" type="Texture" id=1]
[ext_resource path="res://Script/Card/HumanCard.gd" type="Script" id=2]
[ext_resource path="res://Resource/Graphic/Card/border.png" type="Texture" id=3]
[ext_resource path="res://Font.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 145.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 119.5, 144.5 )

[node name="HumanCard" type="KinematicBody2D"]
scale = Vector2( 0.35, 0.35 )
z_index = 1
collision_layer = 16384
collision_mask = 2
script = ExtResource( 2 )

[node name="Border" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Human" type="Sprite" parent="."]
position = Vector2( 0, 20 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -0.5 )
shape = SubResource( 1 )

[node name="HumanCollision" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HumanCollision"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 2 )

[node name="Name" type="Label" parent="."]
margin_left = -120.0
margin_top = -140.0
margin_right = 118.0
margin_bottom = -74.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Người"
align = 1

[connection signal="area_entered" from="HumanCollision" to="." method="_on_HumanCollision_area_entered"]
[connection signal="area_exited" from="HumanCollision" to="." method="_on_HumanCollision_area_exited"]
[connection signal="mouse_entered" from="HumanCollision" to="." method="_on_HumanCollision_mouse_entered"]
[connection signal="mouse_exited" from="HumanCollision" to="." method="_on_HumanCollision_mouse_exited"]
